Updated css for weather component

--- a/src/styling/WeatherComponent.module.scss
+++ b/src/styling/WeatherComponent.module.scss
@@ -1,21 +1,18 @@
 .wrapper {
-    height: 500px;
-    width: 300px;
-    background: red;
+    background: #337394;
+    border-radius: 20px;
+    width: 387px;
+    height: 120px;
+    display: flex;
+    align-items: center;
 }
 
 .box {
-    position: absolute;
-    width: 387px;
-    height: 120px;
-    left: 0px;
-    top: 0px;
     background: #337394;
     border-radius: 20px;
 }
 
 .image {
-    position: absolute;
     left: 30%;
     right: 77.26%;
     top: 50%;
@@ -23,11 +20,6 @@
 }
 
 .location {
-    position: absolute;
-    width: 127px;
-    height: 34px;
-    left: 130px;
-    top: 43px;
     font-family: Work Sans;
     font-style: normal;
     font-weight: bold;
@@ -38,11 +30,6 @@
 }
 
 .temp {
-    position: absolute;
-    width: 81px;
-    height: 42px;
-    left: 294px;
-    top: 43px;
     font-family: Work Sans;
     font-style: normal;
     font-weight: bold;
@@ -53,11 +40,6 @@
 }
 
 .description {
-    position: absolute;
-    width: 174px;
-    height: 14px;
-    left: 130px;
-    top: 69px;
     font-family: Work Sans;
     font-style: normal;
     font-weight: bold;
@@ -66,4 +48,8 @@
     letter-spacing: -0.02em;
     color: #ffffff;
     text-transform: capitalize;
+}
+
+.center {
+    text-align: center;
 }
